# rbennettio

./: .gitignore  LICENSE  manage.py  pyproject.toml
deployment/: README.md  README2.md  cloud-init.yaml  django_rbennettio.ini
deployment/scripts/: backup_database.sh  backup_database_to_s3.sh  restore_database_from_s3.sh
racket_stringer/: apps.py  urls.py
racket_stringer/initial_data/: rackets.csv  strings.csv
racket_stringer/migrations/: 0001_initial.py  0006_auto_20250519_1848.py
rbennettio/: asgi.py  urls.py  views.py  wsgi.py
rbennettio/settings/: app.env.example  base.py  development.py  production.py
rbennettio/static/rbennettio/css/: app.css
rbennettio/templates/rbennettio/: home.html
