[project]
name = "rbennettio"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "crispy-bootstrap5==2025.4",
    "django==5.2.1",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "django-filter==25.1",
    "lxml==5.4.0",
    "requests==2.32.3",
    "uwsgi==2.0.29",
]

[dependency-groups]
dev = [
    "ipython==9.2.0",
    "ruff==0.11.8",
    "werkzeug==3.1.3",
]
